# TaskMeshRendering

./: CMakeLists.txt  README.md  main.cpp  task_mesh_rendering.cpp  task_mesh_rendering.h  vk_resources.cpp  vk_utils.cpp  vk_utils.h
asset/stanford_bunny/: stanford_bunny.gltf
shaders/: common.slang  meshOnly.slang  sample.slang  taskMesh.slang
src/: input.cpp  input.h  task_mesh_rendering.cpp  task_mesh_rendering.h  time.cpp  time.h  vk_context.cpp  vk_context.h  vk_helpers.cpp  vk_helpers.h  vk_imgui_wrapper.cpp  vk_imgui_wrapper.h  vk_pipelines.cpp  vk_pipelines.h  vk_render_targets.cpp  vk_render_targets.h  vk_resources.h  vk_swapchain.cpp  vk_swapchain.h  vk_synchronization.cpp  vk_synchronization.h  vk_types.cpp  vk_types.h  vk_utils.cpp
src/camera/: camera.cpp  camera.h  free_camera.cpp  free_camera.h
src/pipelines/: mesh_only_pipeline.cpp  mesh_only_pipeline.h  task_mesh_pipeline.cpp  task_mesh_pipeline.h  task_mesh_sample_pipeline.cpp  task_mesh_sample_pipeline.h
